--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 server:
   port: ${PORT:9000}
 eureka:
+  instance:
+    hostname: ${CONFIG_SERVER_URL:http://localhost:9000}
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     registry-sync-retry-wait-ms: 0
